@@ -2,15 +2,20 @@ package com.tihu.backend.handler;
 
 import com.tihu.backend.common.ApiException;
 import com.tihu.backend.common.Result;
+import org.springframework.dao.DuplicateKeyException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * 全局异常处理器
  */
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+
+    private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
     /**
      * 处理自定义业务异常
@@ -25,8 +30,19 @@ public class GlobalExceptionHandler {
      */
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public Result handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
-        String message = e.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        String message = e.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
         return Result.error(400, message, null);
+    }
+
+    /**
+     * 处理数据库唯一键冲突
+     */
+    @ExceptionHandler(DuplicateKeyException.class)
+    public Result handleDuplicateKeyException(DuplicateKeyException e) {
+        String message = e.getMessage() != null && e.getMessage().contains("book.title")
+                ? "书名已存在"
+                : "数据已存在，请检查唯一字段";
+        return Result.error(409, message, null);
     }
 
     /**
@@ -34,7 +50,7 @@ public class GlobalExceptionHandler {
      */
     @ExceptionHandler(Exception.class)
     public Result handleException(Exception e) {
-        e.printStackTrace();
+        log.error("Unhandled exception", e);
         return Result.error(500, "服务器内部错误", null);
     }
 }
